--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -10,18 +10,22 @@ h1{
 }
 .menu{
     display: flex;
+    flex-wrap: wrap;
     padding:20px 50px;
 }
 
 .menu>div{
-    flex:40%;
-    margin:15px;
+    margin: 0 10px;
+    flex-basis: calc(50% - 20px);
     display: flex;
 }
 
-.image{
-    flex:1;
+
+.image img{
+    object-fit: cover;
+    height: 200px;
+    width: 200px;
 }
 .item{
-    flex:2
+    padding: 15px;
 }
