--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -7,6 +7,18 @@
 
 h1{
     text-align: center;
+    margin-bottom: 15px;
+}
+.buttons{
+    text-align: center;
+}
+.buttons>button{
+    margin:20px;
+    padding:5px 12px;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: transparent;
+    cursor: pointer;
 }
 .menu{
     display: flex;
@@ -15,7 +27,7 @@ h1{
 }
 
 .menu>div{
-    margin: 0 10px;
+    margin: 10px;
     flex-basis: calc(50% - 20px);
     display: flex;
 }
