--- a/videoBackground/style.css
+++ b/videoBackground/style.css
@@ -17,3 +17,20 @@ video{
     height: 100%;
     width: 100%;
 }
+.back h1{
+    position: absolute;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+.back button{
+    all:unset;
+    position: absolute;
+    bottom:50px;
+    left:20px;
+    background: transparent;
+    padding:15px 25px;
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 15px;
+}
