--- a/scroll/style.css
+++ b/scroll/style.css
@@ -103,6 +103,10 @@ header .banner{
     cursor: pointer;
     display: none;
 }
+
+.top-link.show>button{
+    display: block;
+}
 @media screen and (max-width:800px){
     header nav{
         display: block;
