--- a/grocery/style.css
+++ b/grocery/style.css
@@ -56,6 +56,7 @@ form input[type="submit"]{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin : 10px 0px
 }
 
 .editButton{
