--- a/slider/style.css
+++ b/slider/style.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.slide-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide{
+    display:block;
+}
