--- a/cubeslider/style.css
+++ b/cubeslider/style.css
@@ -9,6 +9,7 @@ body{
 }
 .swiper {
     width: 600px;
+    height: 400px;
 }
 
 .swiper-slide>img{
@@ -16,4 +17,5 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
+    height: 100%;
 }
