--- a/calendar/style.css
+++ b/calendar/style.css
@@ -7,6 +7,7 @@ body{
     height: 100vh;
     width: 100%;
     background-color: azure;
+    color: wheat;
 }
 .calendar_container{
     position: absolute;
