--- a/calendar/style.css
+++ b/calendar/style.css
@@ -24,3 +24,9 @@ body{
     color: white;
     text-align: center;
 }
+
+.day_name , .days{
+    display: grid;
+    text-align: center;
+    grid-template-columns: repeat(7 , 1fr);
+}
