--- a/calendar/style.css
+++ b/calendar/style.css
@@ -29,10 +29,26 @@ body{
     align-items: center;
     margin-bottom: 20px;
 }
-
+.calendar_banner>i{
+    display: block;
+    cursor: pointer;
+    color: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 15px;
+    background-color: wheat;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
 .day_name , .days{
     display: grid;
     text-align: center;
     grid-template-columns: repeat(7 , 1fr);
     gap: 20px;
+}
+
+.day_name{
+    margin-bottom: 20px;
 }
