--- a/calendar/style.css
+++ b/calendar/style.css
@@ -7,7 +7,7 @@ body{
     height: 100vh;
     width: 100%;
     background-color: azure;
-    color: wheat;
+    color: black;
 }
 .calendar_container{
     position: absolute;
@@ -16,11 +16,10 @@ body{
     transform: translate(-50%,-50%);
     border-radius: 15px;
     width: 700px;
-    background-color: black;
+    background-color: white;
 }
 
 .calendar{
-    padding: 30px 50px;
     position: relative;
 }
 .calendar .calendar_banner{
@@ -28,16 +27,17 @@ body{
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    padding: 30px;
+    border-radius: 15px;
+    color: white;
 }
 .calendar_banner>i{
     display: block;
     cursor: pointer;
-    color: black;
     width: 40px;
     height: 40px;
     border-radius: 50%;
     padding: 15px;
-    background-color: wheat;
     display: flex;
     align-items: center;
     text-align: center;
