--- a/calendar/style.css
+++ b/calendar/style.css
@@ -7,7 +7,7 @@ body{
     height: 100vh;
     width: 100%;
     background-color: azure;
-    color: black;
+    color: #787878;
 }
 .calendar_container{
     position: absolute;
@@ -53,6 +53,9 @@ body{
     margin-bottom: 20px;
 }
 
+.days>div{
+    padding:15px;
+}
 .current_day{
     color: blue;
 }
